--- a/poemsradio/src/App.css
+++ b/poemsradio/src/App.css
@@ -2,6 +2,18 @@
   text-align: center;
 }
 
+.Music-player {
+  display:inline-block;
+  text-align: center;
+  margin: 50px;
+}
+
+.poemblurb {
+  display:inline-block;
+  text-align: center;
+  margin: 50px;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
